@@ -9,6 +9,10 @@ cdebconf (0.139) UNRELEASED; urgency=low
   * Mark parent halves of confmodule communication pipes close-on-exec.
   * Move newt initialisation into new cdebconf_newt_setup function, exported
     for the benefit of cdebconf-newt-terminal.
+  * Export a new cdebconf_newt_get_progress_info function so that
+    cdebconf-newt-terminal can reinitialise progress bars (since there's no
+    progress_info member in struct frontend, and it won't fit in the obvious
+    place without breaking the plugin ABI).
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 19 Jan 2009 22:54:08 +0000
 
